completed the project

--- a/src/index.css
+++ b/src/index.css
@@ -8,10 +8,11 @@ body{
 
 .slick-prev{
     left: 3% !important;
-    z-index: 1;
+    z-index: 2;
+    background-color: aqua;
 }
 
 .slick-next{
-    left: 3% !important;
+    right: 3% !important;
     z-index: 1;
 }
